# inventory

./: .gitignore  README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
inv/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
inv/migrations/: 0001_initial.py
inv/templates/inv/: index.html  item_confirm_delete.html  item_create_form.html  item_list.html  item_update_form.html
inventory/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: base_site.html
